<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_reload"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_open_browser"
        android:icon="@drawable/ic_open_in_browser"
        android:title="@string/menu_open_browser"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_rate_app"
        android:icon="@drawable/ic_star"
        android:title="@string/menu_rate_app"
        app:showAsAction="never" />
        
</menu>